--- a/gallery.html
+++ b/gallery.html
@@ -177,3 +177,67 @@
   <img src="https://via.placeholder.com/70x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
   <img src="https://via.placeholder.com/70x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
   <img src="https://via.placeholder.com/70x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="
+<!-- (rest of placeholder cards if any) -->
+</div>
+
+<!-- Modal -->
+<div id="modal" class="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h2 id="modal-name"></h2>
+      <span class="close" id="modal-close">&times;</span>
+    </div>
+    <img id="modal-img" src="" alt="" />
+    <div class="modal-body" id="modal-desc"></div>
+    <div class="modal-footer" id="modal-footer"></div>
+  </div>
+</div>
+
+<script>
+  const gallery = document.querySelector('.gallery');
+  const modal = document.getElementById('modal');
+  const modalName = document.getElementById('modal-name');
+  const modalImg = document.getElementById('modal-img');
+  const modalDesc = document.getElementById('modal-desc');
+  const modalFooter = document.getElementById('modal-footer');
+  const modalClose = document.getElementById('modal-close');
+
+  gallery.addEventListener('click', e => {
+    if(e.target.tagName === 'IMG') {
+      const img = e.target;
+      modalName.textContent = img.dataset.name || 'Unknown Card';
+      modalImg.src = img.src;
+      modalImg.alt = img.alt;
+      modalImg.classList.remove('zoomed');
+
+      // Compose description from data attributes
+      let desc = `<strong>Type:</strong> ${img.dataset.type || '-'}<br>`;
+      if(img.dataset.attribute) desc += `<strong>Attribute:</strong> ${img.dataset.attribute}<br>`;
+      if(img.dataset.level) desc += `<strong>Level:</strong> ${img.dataset.level}<br>`;
+      if(img.dataset.rank) desc += `<strong>Rank:</strong> ${img.dataset.rank}<br>`;
+      desc += `<strong>ATK:</strong> ${img.dataset.atk || '-'} &nbsp;&nbsp; <strong>DEF:</strong> ${img.dataset.def || '-'}<br><br>`;
+      desc += `<strong>Effect:</strong> ${img.dataset.effect || 'No effect description.'}`;
+
+      modalDesc.innerHTML = desc;
+      modalFooter.textContent = "Click on the image to zoom in/out.";
+      modal.style.display = 'block';
+    }
+  });
+
+  modalClose.addEventListener('click', () => {
+    modal.style.display = 'none';
+  });
+
+  window.addEventListener('click', e => {
+    if(e.target === modal) {
+      modal.style.display = 'none';
+    }
+  });
+
+  modalImg.addEventListener('click', () => {
+    modalImg.classList.toggle('zoomed');
+  });
+</script>
+
+</body>
+</html>
